Overflow fix

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ a:hover {
     padding: 16px 16px 16px 16px;
     background: #fafafa;
     margin: 24px 24px 24px 24px;
+    overflow: auto;
 }
 
 #about {
